# academic-weapon

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  runner.bat  setup.bat  setup.sh
examples/: usage_examples.py
scripts/: sync_canvas.py  test_connection.py  view_announcements.py  view_assignments.py
src/: __init__.py  cli.py  config.py  main.py
src/bot/: scheduler.py  telegram_bot.py
src/canvas/: __init__.py  client.py  course_selection.py  downloader.py  models.py  sync.py
src/github/: config_manager.py  models.py  orchestrator.py  pusher.py
src/llm/: analyzer.py  parser.py  prompts.py
src/tui/: app.py
src/tui/screens/: config.py  dashboard.py  settings.py  sync.py
